0.1.1 beta, Feb 27, 2008
=========================
 - Added Mootools release.
 - Renamed private function fireSelectedEvent to fireSelectEvent.
 - Added json example for Prototype.
 - Added json example for Mootools.

0.1.0 alpha, Feb 27, 2008
=========================
 - First release Prototype.