@@ -7,5 +7,8 @@
 		[[0,0.5],[1,0.6],[2,1.8],[3,0.9],[4,2]],
 		[[0,1.5],[1,2],[2,4.5],[3,3.5],[4,5.5]]
 	],
-	options:{xaxis:{noTicks:10, tickDecimals:1}}
+	options:{
+		mouse:{track:true},
+		xaxis:{noTicks:10, tickDecimals:1}
+	}
 }
