@@ -32,7 +32,10 @@
 		[[0,0.5],[1,0.6],[2,1.8],[3,0.9],[4,2]],
 		[[0,1.5],[1,2],[2,4.5],[3,3.5],[4,5.5]]
 	],
-	options:{xaxis:{noTicks:10, tickDecimals:1}}
+	options:{
+		mouse:{track:true},
+		xaxis:{noTicks:10, tickDecimals:1}
+	}
 }</code></pre>
 			<p>
 			Let me give you one advise about JSON. To make sure you receive the data in the right format, use the Firefox extension <a href="http://www.getfirebug.com" title="Firebug Javascript Debug Extension">Firebug</a>
